# Diplom_kuka_youbot

./: main.py  neural_network_yolo.py  server.py
client_kuka/: CMakeLists _12.04.txt  CMakeLists.txt  package.xml
client_kuka/scripts/: KUKA_server.py
client_kuka/src/: KUKA_client.cpp
client_kuka/srv/: AngleValues.srv
server_pc/: client.py  main.py  neural_network_yolo.py
